--- a/roles/aap_ocp_install/templates/platform/instance.yaml.j2
+++ b/roles/aap_ocp_install/templates/platform/instance.yaml.j2
@@ -1,5 +1,5 @@
 ---
-apiVersion: automationhub.ansible.com/v1beta1
+apiVersion: aap.ansible.com/v1alpha1
 kind: AnsibleAutomationPlatform
 metadata:
   name: {{ aap_ocp_install_platform['instance_name'] }}
@@ -7,9 +7,11 @@ metadata:
 spec:
   # Platform
   image_pull_policy: IfNotPresent
+
   # Components
+{% if aap_ocp_install_controller is defined %}
   controller:
-    disabled: {{ aap_ocp_install_controller is not defined | bool }}
+    disabled: false
     create_preload_data: {{ aap_ocp_install_controller['create_preload_data'] | default(true) | bool }}
     garbage_collect_secrets: {{ aap_ocp_install_controller['garbage_collect_secrets'] | default(false) | bool }}
     image_pull_policy: {{ aap_ocp_install_controller['image_pull_policy'] | default('IfNotPresent') }}
@@ -17,13 +19,23 @@ spec:
     projects_storage_size: {{ aap_ocp_install_controller['projects_storage_size'] | default('8Gi') }}
     replicas: {{ aap_ocp_install_controller['replicas'] | default(1) | int }}
     admin_user: {{ aap_ocp_install_controller['admin_user'] | default('admin') }}
-  
-  eda:
-    disabled: {{ aap_ocp_install_eda is not defined | bool }}
-    replicas: {{ aap_ocp_install_eda['replicas'] | default(1) | int }}
-  hub:
-    disabled: {{ aap_ocp_install_hub is not defined | bool }}
+{% else %}
+  controller:
+    disabled: true
+{% endif %}
 
+{% if aap_ocp_install_eda is defined %}
+  eda:
+    disabled: false
+    replicas: {{ aap_ocp_install_eda['replicas'] | default(1) | int }}
+{% else %}
+  eda:
+    disabled: true
+{% endif %}
+
+{% if aap_ocp_install_hub is defined %}
+  hub:
+    disabled: false
     ## Modify to contain your RWM storage class name
     storage_type: {{ aap_ocp_install_hub['storage_type'] | default('file') }}
     {% if aap_ocp_install_hub['storage_type'] == 'file' %}
@@ -34,6 +46,10 @@ spec:
     {% elif aap_ocp_install_hub['storage_type'] == 'azure' %}
         object_storage_azure_secret: {{ aap_ocp_install_hub['storage_azure_secret'] }}
     {% endif %}
+{% else %}
+  hub:
+    disabled: true
+{% endif %}
 
   lightspeed:
     disabled: {{ aap_ocp_install_lightspeed is not defined | bool }}
