- Allow installation of cluster-scoped AAP into a different namespace - Wait until controller/eda/hub APIs are available before marking installation complete

--- a/roles/aap_ocp_install/templates/platform/instance.yaml.j2
+++ b/roles/aap_ocp_install/templates/platform/instance.yaml.j2
@@ -3,7 +3,7 @@ apiVersion: aap.ansible.com/v1alpha1
 kind: AnsibleAutomationPlatform
 metadata:
   name: {{ aap_ocp_install_platform['instance_name'] }}
-  namespace: {{ aap_ocp_install_namespace }}
+  namespace: {{ aap_ocp_install_platform['namespace'] | default(aap_ocp_install_namespace) }}
 spec:
   # Platform
   image_pull_policy: IfNotPresent
