--- a/roles/aap_ocp_install/templates/platform/instance.yaml.j2
+++ b/roles/aap_ocp_install/templates/platform/instance.yaml.j2
@@ -9,7 +9,7 @@ spec:
   image_pull_policy: IfNotPresent
 
   # Components
-{% if aap_ocp_install_controller is defined %}
+{% if aap_ocp_install_controller is defined and aap_ocp_install_controller['install'] %}
   controller:
     disabled: false
     create_preload_data: {{ aap_ocp_install_controller['create_preload_data'] | default(true) | bool }}
@@ -24,7 +24,7 @@ spec:
     disabled: true
 {% endif %}
 
-{% if aap_ocp_install_eda is defined %}
+{% if aap_ocp_install_eda is defined and aap_ocp_install_eda['install'] %}
   eda:
     disabled: false
     replicas: {{ aap_ocp_install_eda['replicas'] | default(1) | int }}
@@ -33,7 +33,7 @@ spec:
     disabled: true
 {% endif %}
 
-{% if aap_ocp_install_hub is defined %}
+{% if aap_ocp_install_hub is defined and aap_ocp_install_hub['install'] %}
   hub:
     disabled: false
     ## Modify to contain your RWM storage class name
@@ -54,4 +54,4 @@ spec:
 {% endif %}
 
   lightspeed:
-    disabled: {{ aap_ocp_install_lightspeed is not defined | bool }}
+    disabled: {{ aap_ocp_install_lightspeed is defined and aap_ocp_install_lightspeed['install'] | bool }}
